--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav ul {
 
 .box:hover{
     background-color: rgb(189, 194, 189);
+    cursor: pointer;
 }
 
 .gameInfo{
@@ -56,12 +57,12 @@ button{
     background-color: rgb(44, 46, 46);
     color: white;
     border-radius: 4px;
-    
 }
 
 button:hover{
     background-color: rgb(192, 214, 214);
     color: black;
+    cursor: pointer;
 }
 .b-b{
     border-bottom: none;
